tests/negative/MissingFields.juvix
module MissingFields;

type Unit := unit;
open Unit;

type Triple (A B C : Type) :=
  mk {
    fst : A;
    snd : B;
    thd : C
  };

triple : Triple Unit Unit Unit :=
  Triple.mk@{
    snd := unit;
  };
